fix: Book section mobile view

--- a/src/containers/book/Book.css
+++ b/src/containers/book/Book.css
@@ -60,10 +60,10 @@
       font-size: 16px;
     }
     .book-heading {
-      font-size: 30px;
+      font-size: 25px;
       font-weight: 400;
       margin-top: -1rem;
-      margin-left: 25px;
+      margin-left: 45px;
       margin-bottom: -2rem;
     }
     .book-text-subtitle {
